--- a/app/src/main/res/layout/tasks_list.xml
+++ b/app/src/main/res/layout/tasks_list.xml
@@ -20,16 +20,17 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
+            android:gravity="center"
             android:padding="5dp">
 
             <ImageView
                 android:id="@+id/imageview"
-                android:layout_width="50dp"
-                android:layout_height="50dp" />
+                android:layout_width="45dp"
+                android:layout_height="45dp" />
 
             <TextView
                 android:id="@+id/tvName"
-                android:layout_width="182dp"
+                android:layout_width="163dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:layout_marginLeft="15dp"
@@ -38,13 +39,24 @@
                 android:textStyle="bold" />
 
             <TextView
+                android:id="@+id/textView18"
+                android:layout_width="70dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/small_margin"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="Priority:"
+                android:textSize="15sp"
+                android:textStyle="bold" />
+
+            <TextView
                 android:id="@+id/priority"
-                android:layout_width="wrap_content"
+                android:layout_width="50dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:layout_marginLeft="15dp"
                 android:layout_weight="1"
-                android:text="TextView"
+                android:text="Text"
                 android:textSize="20sp"
                 android:textStyle="bold" />
         </LinearLayout>
@@ -54,7 +66,6 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:gravity="right"
             android:padding="@dimen/small_padding"
             android:text="TextView"
             android:textSize="16sp"
