--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -12,6 +12,7 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor">@color/DarkPrimaryColor</item>
         <!-- Customize your theme here. -->
+        <item name="colorAccent">@color/DarkPrimaryTextColor</item>
 
     </style>
 </resources>
